--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.myadream.app</groupId>
     <artifactId>com-myadream-app-api</artifactId>
+    <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
+    <modules>
+        <module>common</module>
+        <module>authorize</module>
+    </modules>
     <name>service-api-spring-boot</name>
     <description>service-api-spring-boot</description>
 
@@ -14,6 +19,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <aliyun-spring-boot.version>1.0.0</aliyun-spring-boot.version>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+
+        <mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
+        <tk-mybatis-mapper.version>4.1.5</tk-mybatis-mapper.version>
     </properties>
 
     <repositories>
@@ -155,6 +163,17 @@
                 <version>${aliyun-spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot-starter.version}</version>
+            </dependency>
+            <!--        优化生成dto-->
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper</artifactId>
+                <version>${tk-mybatis-mapper.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
