--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.myadream.app</groupId>
-    <artifactId>com-myadream-app-api</artifactId>
+    <artifactId>service-api</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>common</module>
         <module>authorize</module>
+        <module>swagger</module>
     </modules>
     <name>service-api-spring-boot</name>
     <description>service-api-spring-boot</description>
@@ -22,6 +23,9 @@
 
         <mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
         <tk-mybatis-mapper.version>4.1.5</tk-mybatis-mapper.version>
+        <springdoc-openapi-ui.version>1.6.8</springdoc-openapi-ui.version>
+        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
+        <arthas-spring-boot-starter.version>3.4.8</arthas-spring-boot-starter.version>
     </properties>
 
     <repositories>
@@ -104,12 +108,7 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>com.taobao.arthas</groupId>
-            <artifactId>arthas-spring-boot-starter</artifactId>
-            <version>3.4.8</version>
-            <scope>runtime</scope>
-        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -150,6 +149,28 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.taobao.arthas</groupId>
+                <artifactId>arthas-spring-boot-starter</artifactId>
+                <version>${arthas-spring-boot-starter.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+
+            <!--            swagger api -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc-openapi-ui.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>${springfox-boot-starter.version}</version>
+            </dependency>
+
+            <!--            swagger api -->
+
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
