--- a/conf/src/main/resources/application-dev.yml
+++ b/conf/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@
 
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    driver-class-name: com.mysql.cj.jdbc.Driver
     name: defaultDataSource
     url: jdbc:mysql://localhost:3306/app?serverTimezone=UTC
     username: root
@@ -16,5 +16,4 @@ server:
 mybatis:
   mapper-locations: classpath:mappers/*xml
   type-aliases-package: service.api.mybatis.entity
-
 
