--- a/conf/src/main/resources/application.yml
+++ b/conf/src/main/resources/application.yml
@@ -1,20 +1,15 @@
-
-
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     name: defaultDataSource
-    url: jdbc:mysql://localhost:3306/app?serverTimezone=UTC
-    username: root
-    password: root
   liquibase:
     enabled: false
   devtools:
-    add-properties: true
+    add-properties: false
+  profiles:
+    active: @profilesActive@
 server:
-  port: 8001
+  port: 8000
 mybatis:
   mapper-locations: classpath:mappers/*xml
   type-aliases-package: service.api.mybatis.entity
-
-
