--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,29 +6,29 @@
         <artifactId>service-api</artifactId>
         <groupId>com.myadream.app</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
+    <artifactId>api</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
     <dependencies>
+
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </dependency>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>3.0.0</version>
+            <groupId>com.myadream.app</groupId>
+            <artifactId>conf</artifactId>
         </dependency>
-            <dependency>
-                <groupId>com.myadream.app</groupId>
-                <artifactId>conf</artifactId>
-            </dependency>
-
+        <dependency>
+            <groupId>com.myadream.app</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
     </dependencies>
-
 
 </project>
