--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <name>service-api-spring-boot</name>
     <description>service-api-spring-boot</description>
 
+
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,6 +32,7 @@
         <com.myadream.app.conf.version>0.0.1-SNAPSHOT</com.myadream.app.conf.version>
         <com.myadream.app.common.version>0.0.1-SNAPSHOT</com.myadream.app.common.version>
         <com.myadream.app.repository.version>0.0.1-SNAPSHOT</com.myadream.app.repository.version>
+        <com.myadream.app.api.version>0.0.1-SNAPSHOT</com.myadream.app.api.version>
     </properties>
 
     <repositories>
@@ -47,16 +49,12 @@
     </repositories>
 
     <dependencies>
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
@@ -91,7 +89,7 @@
 
     <dependencyManagement>
         <dependencies>
-<!--            modules-->
+            <!--            modules-->
             <dependency>
                 <groupId>com.myadream.app</groupId>
                 <artifactId>conf</artifactId>
@@ -108,24 +106,29 @@
                 <artifactId>repository</artifactId>
                 <version>${com.myadream.app.repository.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.myadream.app</groupId>
+                <artifactId>api</artifactId>
+                <version>${com.myadream.app.api.version}</version>
+            </dependency>
 
             <!--            modules-->
 
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>aliyun-oss-spring-boot-starter</artifactId>
-                <scope>import</scope>
+                <!--                <scope>import</scope>-->
             </dependency>
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>aliyun-sms-spring-boot-starter</artifactId>
-                <scope>import</scope>
+                <!--                <scope>import</scope>-->
             </dependency>
             <dependency>
                 <groupId>com.taobao.arthas</groupId>
                 <artifactId>arthas-spring-boot-starter</artifactId>
                 <version>${arthas-spring-boot-starter.version}</version>
-                <scope>runtime</scope>
+                <!--                <scope>runtime</scope>-->
             </dependency>
 
             <!--            swagger api -->
@@ -170,7 +173,6 @@
     </dependencyManagement>
 
     <build>
-
         <finalName>${project.artifactId}-${project.version}</finalName>
 
         <plugins>
