--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,6 +29,14 @@
             <groupId>com.myadream.app</groupId>
             <artifactId>common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.myadream.app</groupId>
+            <artifactId>service-interface</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.myadream.app</groupId>
+            <artifactId>service-impl</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
