--- a/conf/pom.xml
+++ b/conf/pom.xml
@@ -51,7 +51,12 @@
 
     </profiles>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
