--- a/pom.xml
+++ b/pom.xml
@@ -2,115 +2,112 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.myadream.app</groupId>
-    <artifactId>com-myadream-app-api</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>config</module>
+        <module>api</module>
+    </modules>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>com.myadream.app.qiyang</groupId>
+    <artifactId>service-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>service-api-spring-boot</name>
-    <description>service-api-spring-boot</description>
+    <name>service-api-springboot</name>
+    <description>service-api-springboot</description>
 
     <properties>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <aliyun-spring-boot.version>1.0.0</aliyun-spring-boot.version>
-        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <java.version>11</java.version>
+        <repackage.classifier/>
+        <spring-native.version>0.12.0-SNAPSHOT</spring-native.version>
+
+        <com-myadream-app-qiyang-api.version>0.0.1-SNAPSHOT</com-myadream-app-qiyang-api.version>
+        <com-myadream-app-qiyang-conf.version>0.0.1-SNAPSHOT</com-myadream-app-qiyang-conf.version>
+
+        <mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
+        <tk-mybatis-mapper.version>4.1.5</tk-mybatis-mapper.version>
+        <com-alibaba-fastjson.version>2.0.3</com-alibaba-fastjson.version>
+        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>spring</id>
-            <url>https://maven.aliyun.com/repository/spring</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-    <profiles>
-        <profile>
-            <id>local</id>
-            <properties>
-                <profilesActive>local</profilesActive>
-            </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-        <profile>
-            <id>dev</id>
-            <properties>
-                <profilesActive>dev</profilesActive>
-            </properties>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-        </profile>
-        <profile>
-            <id>test</id>
-            <properties>
-                <profilesActive>test</profilesActive>
-            </properties>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-        </profile>
-        <profile>
-            <id>prod</id>
-            <properties>
-                <profilesActive>prod</profilesActive>
-            </properties>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-        </profile>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.myadream.app.qiyang</groupId>
+                <artifactId>api</artifactId>
+                <version>${com-myadream-app-qiyang-api.version}</version>
+            </dependency>
 
-    </profiles>
+            <dependency>
+                <groupId>com.myadream.app.qiyang</groupId>
+                <artifactId>config</artifactId>
+                <version>${com-myadream-app-qiyang-conf.version}</version>
+            </dependency>
+
+            <!--           <dependency>-->
+            <!--               <groupId>org.springframework.boot</groupId>-->
+            <!--               <artifactId>spring-boot-starter-jdbc</artifactId>-->
+            <!--           </dependency>-->
+            <!--           <dependency>-->
+            <!--               <groupId>org.springframework.boot</groupId>-->
+            <!--               <artifactId>spring-boot-starter-web</artifactId>-->
+            <!--           </dependency>-->
+            <!--           <dependency>-->
+            <!--               <groupId>mysql</groupId>-->
+            <!--               <artifactId>mysql-connector-java</artifactId>-->
+            <!--               <scope>runtime</scope>-->
+            <!--           </dependency>-->
+            <!--           <dependency>-->
+            <!--               <groupId>org.springframework.boot</groupId>-->
+            <!--               <artifactId>spring-boot-starter-test</artifactId>-->
+            <!--               <scope>test</scope>-->
+            <!--           </dependency>-->
+
+            <!--            swagger api -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>${springfox-boot-starter.version}</version>
+            </dependency>
+
+            <!--            mybatis-->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot-starter.version}</version>
+            </dependency>
+            <!--        优化生成dto-->
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper</artifactId>
+                <version>${tk-mybatis-mapper.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${com-alibaba-fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.experimental</groupId>
+                <artifactId>spring-native</artifactId>
+                <version>${spring-native.version}</version>
+            </dependency>
+
+        </dependencies>
+
+    </dependencyManagement>
+
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>aliyun-oss-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>aliyun-sms-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.taobao.arthas</groupId>
-            <artifactId>arthas-spring-boot-starter</artifactId>
-            <version>3.4.8</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -122,85 +119,111 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>aliyun-spring-boot-dependencies</artifactId>
-                <version>${aliyun-spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <build>
-
         <finalName>${project.artifactId}-${project.version}</finalName>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>application-${profilesActive}.yml</include>
-                    <include>application.yml</include>
-                    <include>**/*.xml</include>
-                </includes>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.7.RELEASE</version>
-                <configuration>
-                    <mainClass>com.myadream.app.api.ServiceApiSpringBootApplication</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>repackage</id>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <!--        <plugins>-->
+        <!--            <plugin>-->
+        <!--                <groupId>org.springframework.boot</groupId>-->
+        <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+        <!--                <configuration>-->
+        <!--                    <excludes>-->
+        <!--                        <exclude>-->
+        <!--                            <groupId>org.projectlombok</groupId>-->
+        <!--                            <artifactId>lombok</artifactId>-->
+        <!--                        </exclude>-->
+        <!--                    </excludes>-->
+        <!--                    <classifier>${repackage.classifier}</classifier>-->
+        <!--                    <image>-->
+        <!--                        <builder>paketobuildpacks/builder:tiny</builder>-->
+        <!--                        <env>-->
+        <!--                            <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>-->
+        <!--                        </env>-->
+        <!--                    </image>-->
+        <!--                </configuration>-->
+        <!--            </plugin>-->
+        <!--            <plugin>-->
+        <!--                <groupId>org.springframework.experimental</groupId>-->
+        <!--                <artifactId>spring-aot-maven-plugin</artifactId>-->
+        <!--                <version>${spring-native.version}</version>-->
+        <!--                <executions>-->
+        <!--                    <execution>-->
+        <!--                        <id>test-generate</id>-->
+        <!--                        <goals>-->
+        <!--                            <goal>test-generate</goal>-->
+        <!--                        </goals>-->
+        <!--                    </execution>-->
+        <!--                    <execution>-->
+        <!--                        <id>generate</id>-->
+        <!--                        <goals>-->
+        <!--                            <goal>generate</goal>-->
+        <!--                        </goals>-->
+        <!--                    </execution>-->
+        <!--                </executions>-->
+        <!--            </plugin>-->
+        <!--        </plugins>-->
     </build>
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+        </pluginRepository>
+    </pluginRepositories>
 
+    <!--    <profiles>-->
+    <!--        <profile>-->
+    <!--            <id>native</id>-->
+    <!--            <properties>-->
+    <!--                <repackage.classifier>exec</repackage.classifier>-->
+    <!--                <native-buildtools.version>0.9.11</native-buildtools.version>-->
+    <!--            </properties>-->
+    <!--            <dependencies>-->
+    <!--                <dependency>-->
+    <!--                    <groupId>org.junit.platform</groupId>-->
+    <!--                    <artifactId>junit-platform-launcher</artifactId>-->
+    <!--                    <scope>test</scope>-->
+    <!--                </dependency>-->
+    <!--            </dependencies>-->
+    <!--            <build>-->
+    <!--                <plugins>-->
+    <!--                    <plugin>-->
+    <!--                        <groupId>org.graalvm.buildtools</groupId>-->
+    <!--                        <artifactId>native-maven-plugin</artifactId>-->
+    <!--                        <version>${native-buildtools.version}</version>-->
+    <!--                        <extensions>true</extensions>-->
+    <!--                        <executions>-->
+    <!--                            <execution>-->
+    <!--                                <id>test-native</id>-->
+    <!--                                <phase>test</phase>-->
+    <!--                                <goals>-->
+    <!--                                    <goal>test</goal>-->
+    <!--                                </goals>-->
+    <!--                            </execution>-->
+    <!--                            <execution>-->
+    <!--                                <id>build-native</id>-->
+    <!--                                <phase>package</phase>-->
+    <!--                                <goals>-->
+    <!--                                    <goal>build</goal>-->
+    <!--                                </goals>-->
+    <!--                            </execution>-->
+    <!--                        </executions>-->
+    <!--                    </plugin>-->
+    <!--                </plugins>-->
+    <!--            </build>-->
+    <!--        </profile>-->
+    <!--    </profiles>-->
+    <!---->
 </project>
