--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <tk-mybatis-mapper.version>4.1.5</tk-mybatis-mapper.version>
         <com-alibaba-fastjson.version>2.0.3</com-alibaba-fastjson.version>
         <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
+        <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
         <eu-bitwalker-UserAgentUtils.version>1.21</eu-bitwalker-UserAgentUtils.version>
     </properties>
 
@@ -79,6 +80,14 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>${springfox-boot-starter.version}</version>
+            </dependency>
+
+            <!--            swagger api 增强-->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <!--在引用时请在maven中央仓库搜索3.X最新版本号-->
+                <version>${knife4j-spring-boot-starter.version}</version>
             </dependency>
 
             <!--            mybatis-->
