--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -1,10 +1,13 @@
+
 spring:
   config:
     name: api
   profiles:
-    include: swagger
+    include: i18n
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
 
-    
+
+server:
+  port: 8088
