--- a/config/pom.xml
+++ b/config/pom.xml
@@ -16,18 +16,11 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-remote-resources-plugin</artifactId>
-                <version>1.7.0</version>
+                <version>${maven-remote-resources-plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
