--- a/config/src/main/resources/dev/log4j2.yml
+++ b/config/src/main/resources/dev/log4j2.yml
@@ -88,7 +88,7 @@ Configuration:
         - ref: ROLLING_INFO_FILE
         - ref: ROLLING_ERROR_FILE
     Logger: # 为 com.logictech 包配置特殊的Log级别，方便调试
-      - name: com.logictech
+      - name: com.myadream
         additivity: false
         level: ${sys:log.level.ora}
         AppenderRef:
