--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,6 +17,19 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.myadream.app.qiyang</groupId>
+            <artifactId>services</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.myadream.app.qiyang</groupId>
+            <artifactId>config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.myadream.app.qiyang</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+
 
         <!-- Swagger UI -->
         <dependency>
@@ -46,18 +59,27 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+
+        <!--  validate hibernate -->
         <dependency>
-            <groupId>com.myadream.app.qiyang</groupId>
-            <artifactId>services</artifactId>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+        <!--<editor-fold desc="AOP">-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.myadream.app.qiyang</groupId>
-            <artifactId>config</artifactId>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.myadream.app.qiyang</groupId>
-            <artifactId>common</artifactId>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
         </dependency>
+        <!--</editor-fold>-->
     </dependencies>
 
 
