--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   profiles:
-    include: swagger
+    include: swagger,i18n
 server:
-  port: 8088
+  port: 82
   servlet:
     context-path: /api
