--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # log4j conf
 logging.config=classpath:log4j2.yml
 
-spring.profiles.include=i18n,redis,jpa,datasource,jwt,swagger
+spring.profiles.include=i18n,redis,jpa,datasource,jwt,swagger,flyway
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
