--- a/single/pom.xml
+++ b/single/pom.xml
@@ -95,6 +95,33 @@
             <artifactId>flyway-core</artifactId>
         </dependency>
 
+        <!--jpa相关依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!--JDBC相关依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <!--MySQL相关依赖-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <!--阿里巴巴druid连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+        <!--一个处理xml的框架-->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+        </dependency>
+
     </dependencies>
 
 
@@ -130,7 +157,6 @@
                 <includes>
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
-                    <include>mapper/*</include>
                     <include>test.json</include>
                 </includes>
                 <excludes>
