--- a/single/src/main/resources/conf/dev/application-jpa.yml
+++ b/single/src/main/resources/conf/dev/application-jpa.yml
@@ -1,5 +1,11 @@
 spring:
   jpa:
+    database: mysql
+    show-sql: true
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+      naming_strategy: org.hibernate.cfg.ImprovedNamingStrategy
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
