--- a/single/src/main/resources/conf/dev/application-security.yml
+++ b/single/src/main/resources/conf/dev/application-security.yml
@@ -15,10 +15,10 @@ secure:
       - /favicon.ico
       - /actuator/**
       - /druid/**
+      - /api/login
+      - /api/register
       - /admin/login
       - /admin/register
-      - /admin/info
       - /admin/logout
-      - /minio/upload
       - /swagger-ui.html
       - /webjars/**
