--- a/api/src/main/resources/conf/dev/application-druid.yml
+++ b/api/src/main/resources/conf/dev/application-druid.yml
@@ -7,7 +7,9 @@ datasource:
     #最大连接等待超时时间
     maxWait: 60000
     #打开PSCache，并且指定每个连接PSCache的大小
+    # 是否缓存preparedStatement，也就是PSCache。PSCache对支持游标的数据库性能提升巨大，比如说oracle。在mysql下建议关闭。
     poolPreparedStatements: true
+    # 要启用PSCache，必须配置大于0，当大于0时，poolPreparedStatements自动触发修改为true。
     maxPoolPreparedStatementPerConnectionSize: 20
     #通过connectionProperties属性来打开mergeSql功能；慢SQL记录
     #connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
@@ -15,8 +17,32 @@ datasource:
     timeBetweenEvictionRunsMillis: 60000
     minEvictableIdleTimeMillis: 300000
     validationQuery: select 1 from dual
+    # 建议配置为true，不影响性能，并且保证安全性。申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
     testWhileIdle: true
+    # 申请连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能
     testOnBorrow: false
+    # 归还连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
     testOnReturn: false
     #配置监控统计拦截的filters，去掉后监控界面sql将无法统计,'wall'用于防火墙
     filters: stat, wall, log4j
+    web-stat-filter:
+      enabled: true
+      exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"
+    stat-view-servlet:
+      enabled: true
+      login-username: root
+      login-password: root
+      deny:
+      allow: 127.0.0.1,localhost
+    filter:
+      stat:
+        db-type: h2
+        enabled: true
+        log-slow-sql: true
+        slow-sql-millis: 2000
+      wall:
+        enabled: true
+        db-type: h2
+        config:
+          delete-allow: false
+          drop-table-allow: false
